clang/test/BSC/Negative/Ownership/Owned/owned_trait_fun_call/owned_trait_fun_call.cbs
// RUN: %clang_cc1 -verify %s

_Trait T {
  _Safe void do_it(This* _Owned this);
  void do_that(This* this);
  _Safe void do_this(This* _Borrow this);
};

_Safe void int::do_it(int* _Owned this) {
  _Unsafe { int* x = __move_to_raw(this); }
}

void int::do_that(int* this) {
}

_Safe void int::do_this(int* _Borrow this) {
}

_Impl _Trait T for int;

struct S {
  int* _Owned a;
  int* _Owned b;
};

_Safe void struct S::do_it(struct S* _Owned this) {
  _Unsafe {
    int* a = __move_to_raw(this->a);
    int* b = __move_to_raw(this->b);
    void* s = __move_to_raw(this); // expected-error {{use of all moved value: `this`}}
  }
}

void struct S::do_that(struct S* this) {
}

_Safe void struct S::do_this(struct S* _Borrow this) {
}

_Impl _Trait T for struct S;

void test1() {
  int x = 1;
  _Trait T* t = &x;
  t->do_it(); // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'void *_Owned'}}
  t->do_that();
}

void test2() {
  int x = 1;
  _Trait T* _Owned t = __take_from_raw(&x); // expected-error {{expected a pointer type which has implemented '_Trait T', found 'int *_Owned _Nullable'}}
  t->do_it();
  t->do_that(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Owned' to 'void *'}}
  t->do_this(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Owned' to 'void *_Borrow'}}
}

void test3() {
  int x = 1;
  _Trait T* _Borrow t = &_Mut x;
  t->do_it(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Borrow' to 'void *_Owned'}}
  t->do_this();
}

_Safe int* _Owned initI(void);
_Safe struct S initS(void);
struct S* initSP();
_Safe struct S* _Owned convertToOwned(struct S);

void test4() {
  struct S* s = initSP();
  _Trait T* t = s;
  t->do_it(); // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'void *_Owned'}}
  t->do_that();
}

void test5() {
  struct S s = initS();
  struct S* _Owned sp = convertToOwned(s);
  _Trait T* _Owned t = sp;
  t->do_it();
  t->do_that(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Owned' to 'void *'}}
  t->do_this(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Owned' to 'void *_Borrow'}}
}

void test6() {
  struct S s = initS();
  _Trait T* _Borrow t= &_Mut s;
  t->do_it(); // expected-error {{incompatible _Owned types, cannot cast 'void *_Borrow' to 'void *_Owned'}}
  t->do_this();
}
